fix profile appbar spacing

--- a/topeka-categories.css
+++ b/topeka-categories.css
@@ -21,7 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 }
 
 .category-toolbar::shadow #topBar {
-  height: 100px;
+  height: 96px;
 }
 
 .topeka-avatar {
